# pkfs

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/pkfs/: Cargo.toml
crates/pkfs-2d/: Cargo.toml
crates/pkfs-2d/src/: cg.rs  lib.rs  ncer.rs
crates/pkfs-cli/: Cargo.toml
crates/pkfs-cli/src/: main.rs
crates/pkfs-gdext/: Cargo.toml
crates/pkfs-gdext/src/: lib.rs
crates/pkfs-nitro/: Cargo.toml
crates/pkfs-nitro/examples/: convert.rs
crates/pkfs-nitro/src/: connection.rs  db.rs  lib.rs
crates/pkfs-nitro/src/convert/: image_namer.rs  mod.rs
crates/pkfs-nitro/src/convert/gltf/: curve.rs  gltf.rs  mod.rs  object_trs.rs  primitive.rs
crates/pkfs-nitro/src/decompress/: mod.rs
crates/pkfs-nitro/src/nds/: decode_texture.rs  gpu_cmds.rs  mod.rs  texture_params.rs
crates/pkfs-nitro/src/nitro/: animation.rs  container.rs  info_block.rs  material_animation.rs  mod.rs  model.rs  name.rs  pattern.rs  render_cmds.rs  rotation.rs  tex.rs
crates/pkfs-nitro/src/primitives/: mod.rs
crates/pkfs-nitro/src/skeleton/: joint_tree.rs  mod.rs  vertex_record.rs
crates/pkfs-nitro/src/util/: bimap.rs  bivec.rs  cur.rs  fields.rs  mod.rs  out_dir.rs  tree.rs  view.rs
crates/pkfs-rom/: Cargo.toml
crates/pkfs-rom/src/: blz.rs  extract.rs  lib.rs  map.rs  mapping.rs  narc.rs  rom.rs  signature.rs
crates/pkfs/src/: dump.rs  lib.rs  map.rs
data/mappings/: b2w2.toml  bw.toml  hgss.toml
game/: main.tscn  map_viewer.gd  map_viewer.gd.uid  pkfs.gdextension  pkfs.gdextension.uid  project.godot
