[package]
name = "pkfs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line dumper for textures, sprites and models from Gen 4/5 Pokemon ROMs."

[[bin]]
name = "pkfs"
path = "src/main.rs"

[dependencies]
pkfs.workspace = true
anyhow.workspace = true
clap.workspace = true
