[package]
name = "pkfs-rom"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nintendo DS ROM filesystem (FAT/FNT), NARC archives, format signatures and per-game manifests for Gen 4/5 Pokemon."

[dependencies]
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
toml = "0.8"
